syntax = "proto3";

service UsersService {
  rpc CreateUser(NewUser) returns (Result) {}
  rpc GetUser(UserId) returns (User) {}
  rpc UpdateField(UpdateUserInfo) returns (Result) {}
  rpc RemoveUser(UserId) returns (Result) {}
}

message UserId {
  int32 id = 1;
}

message Result { 
  string data = 1;
}

message NewUser {
  string name = 1;
  string surname = 2;
  string email = 3;
}

message User {
  string id = 1;
  string name = 2;
  string surname = 3;
  string email = 4;
  string created_at = 5;
  string updated_at = 6;
}

message UpdateUserInfo {
  string fieldname = 1;
  string value = 2;
  int32 id = 3;
}
