syntax = "proto3";

service UsersService {
  rpc CreateUser(UserInfo) returns (Result) {}
  rpc RemoveUser(UserId) returns (Result) {}
  rpc ModifyField(ModifyUserInfo) returns (Result) {}
}

message UserId {
  int32 id = 1;
}

message Result { 
 string result = 1;
}

message UserInfo {
  string name = 1;
  string surname = 2;
  string email = 3;
  string phone = 4;
  string password = 5;
  string salt = 6;
}

message ModifyUserInfo {
  string field = 1;
  enum FieldType {
    NAME = 0;
    SURNAME = 1;
    PHONE = 2;
  }
}
